fixed a few ui bugs, added Description Markdown Renderer and JSON Editor for Message Shapes, etc

--- a/bt_options.html
+++ b/bt_options.html
@@ -116,6 +116,15 @@
     </section>
 
     <section>
+        <span>Component Description Markdown:</span><br>
+        <select name="description_markdown" class="option">
+            <option value="on" selected>Render Automatically</option>
+            <option value="manual">Render Manually</option>
+            <option value="off">OFF</option>
+        </select>
+    </section>
+
+    <section>
         <span>Full Screen Shortcut (<a href="https://keycode.info/" target="_blank">must be a keycode</a>):</span><br>
         <input type="number" name="full_screen_shortcut" class="option" value="192">
         
